--- a/webProjects.html
+++ b/webProjects.html
@@ -26,13 +26,14 @@
         <p class="back-Para">Back to Home Page</p>
     </div>
 
+    <!-- project 1 -->
+    <p class="section__text__p4">Project 1</p>
+    <h1 class="title">My Image Gallery</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/image-gallery.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project1">
-        <div class="section__pic-container-profile">
-            <img src="./assets/image-gallery.png" alt="Tushar Mahajan profile picture" />
-        </div>
         <div class="section__text">
-            <p class="section__text__p4">Project 1</p>
-            <h1 class="title">My Image Gallery</h1>
             <p class="section__text__p2">About</p>
             <p class="section__text__p3"> Responsive image gallery using HTML/CSS. Cards with drop shadow & hover
                 effects. Captions fade-in on hover. Styled heading with font change & shadow. Adaptive layout &
@@ -56,13 +57,15 @@
         </div>
     </div>
 
+    <!-- project 2 -->
+    <p class="section__text__p4">Project 2</p>
+    <h1 class="title">My Portfolio</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/myPortfolio.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/myPortfolio.png" alt="Tushar Mahajan profile picture" />
-        </div>
         <div class="section__text">
-            <p class="section__text__p4">Project 2</p>
-            <h1 class="title">My Portfolio</h1>
+
             <p class="section__text__p2">About</p>
             <p class="section__text__p3"> Discover my portfolio crafted with HTML, CSS, and JS. Immerse yourself in a
                 dynamic showcase of my projects, thoughtfully designed and skillfully coded. Explore a fusion of
@@ -87,13 +90,17 @@
         </div>
     </div>
 
+
+    <!-- project 3 -->
+    <p class="section__text__p4">Project 3</p>
+    <h1 class="title">Clone(FUGIFILM)</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/fugi-film.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/fugi-film.png" alt="Tushar Mahajan profile picture" />
-        </div>
+
         <div class="section__text">
-            <p class="section__text__p4">Project 3</p>
-            <h1 class="title">Clone(FUGIFILM)</h1>
+
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
                 Welcome to the Clone website of FujiFilm Camera! Discover the world of photography with our exquisite
@@ -119,13 +126,16 @@
         </div>
     </div>
 
+    <!-- project 4 -->
+    <p class="section__text__p4">Project 4</p>
+    <h1 class="title">Parallax Effects</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/Parallax.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/Parallax.png" alt="Tushar Mahajan profile picture" />
-        </div>
+
         <div class="section__text">
-            <p class="section__text__p4">Project 4</p>
-            <h1 class="title">Parallax Effects</h1>
+
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
                 Create captivating websites with the parallax effect using HTML and CSS. Immerse users in a dynamic 3D
@@ -151,13 +161,14 @@
         </div>
     </div>
 
+    <!-- project 5 -->
+    <p class="section__text__p4">Project 5</p>
+    <h1 class="title">Clone(Saudhi)</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/saudhi.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/saudhi.png" alt="Tushar Mahajan profile picture" />
-        </div>
         <div class="section__text">
-            <p class="section__text__p4">Project 5</p>
-            <h1 class="title">Clone(Saudhi)</h1>
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
                 Welcome to our clone website of Saudi Arabia Tourism! Immerse yourself in the rich cultural heritage and
@@ -185,13 +196,14 @@
     </div>
 
 
+    <!-- project 6 -->
+    <p class="section__text__p4">Project 6</p>
+    <h1 class="title">Chat-Live</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/chat-live.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/chat-live.png" alt="Tushar Mahajan profile picture" />
-        </div>
         <div class="section__text">
-            <p class="section__text__p4">Project 6</p>
-            <h1 class="title">Chat-Live</h1>
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
                 Chat-Live is a clone website that replicates the Login and SignUp pages of Facebook, designed with HTML
@@ -209,7 +221,8 @@
                     onclick="'https://github.com/Tushar20-20Mahajan/Clone_FB_Login_SignUp_Chat_Live.git'">
                     Git-Hub
                 </button>
-                <button class="btn btn-color-1" onclick="location.href='https://clone-fb-login-sign-up-chat-live.vercel.app/'">
+                <button class="btn btn-color-1"
+                    onclick="location.href='https://clone-fb-login-sign-up-chat-live.vercel.app/'">
                     Live-Demo
                 </button>
             </div>
