--- a/androidProjects.html
+++ b/androidProjects.html
@@ -27,13 +27,16 @@
         <p class="back-Para">Back to Home Page</p>
     </div>
 
+    <!-- project 1 -->
+    <p class="section__text__p4">Project 1</p>
+    <h1 class="title">Cricket Quiz App</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/project-1-1.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project1">
-        <div class="section__pic-container-profile">
-            <img src="./assets/project-1-1.png" alt="Tushar Mahajan profile picture" />
-        </div>
+
         <div class="section__text">
-            <p class="section__text__p4">Project 1</p>
-            <h1 class="title">Cricket Quiz App</h1>
+
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
                 "Experience the thrill of cricket with our Kotlin-powered quiz app! Answer 10 engaging questions to test
@@ -53,13 +56,14 @@
         </div>
     </div>
 
+    <!-- project 2 -->
+    <p class="section__text__p4">Project 2</p>
+    <h1 class="title">Age Calculator</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/project-2-2.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/project-2-2.png" alt="Tushar Mahajan profile picture" />
-        </div>
         <div class="section__text">
-            <p class="section__text__p4">Project 2</p>
-            <h1 class="title">Age Calculator</h1>
             <p class="section__text__p2">About</p>
             <p class="section__text__p3"> "AgeCalcKotlin: A sleek Kotlin app for age calculation! Convert your age into
                 seconds, minutes, days, and years with a user-friendly interface. Swiftly determine your time lived.
@@ -80,13 +84,16 @@
         </div>
     </div>
 
+    <!-- project 3 -->
+    <p class="section__text__p4">Project 3</p>
+    <h1 class="title">Calculator</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/project-3-3.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/project-3-3.png" alt="Tushar Mahajan profile picture" />
-        </div>
+
         <div class="section__text">
-            <p class="section__text__p4">Project 3</p>
-            <h1 class="title">Calculator</h1>
+
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
                 Easily crunch numbers with our Kotlin-based Simple Calculator app. Perform basic math operations,
@@ -109,27 +116,28 @@
         </div>
     </div>
 
+    <!-- project 4 -->
+    <p class="section__text__p4">Project 4</p>
+    <h1 class="title">People Counter</h1>
+    <div class="section__pic-container-profile">
+        <img src="./assets/project-4-4.png" alt="Tushar Mahajan profile picture" />
+    </div>
     <div id="project2">
-        <div class="section__pic-container-profile">
-            <img src="./assets/project-4-4.png" alt="Tushar Mahajan profile picture" />
-        </div>
         <div class="section__text">
-            <p class="section__text__p4">Project 4</p>
-            <h1 class="title">People Counter</h1>
             <p class="section__text__p2">About</p>
             <p class="section__text__p3">
                 A basic counter App with pop up .</p>
             <p class="section__text__p4"><u>Languages</u></p>
             <p class="section__text__p3">
 
-               Kotlin -> 100%</p>
+                Kotlin -> 100%</p>
 
             <div class="btn-container">
                 <button class="btn btn-color-1"
                     onclick="location.href='https://github.com/Tushar20-20Mahajan/Counter.git'">
                     Git-Hub
                 </button>
-                
+
             </div>
 
         </div>
