--- a/index.html
+++ b/index.html
@@ -352,17 +352,18 @@
             </div>
             <div class="contact-right">
               <!-- Contact right content -->
-              <form action="">
+              <form name="submit-to-google-sheet">
                 <input type="text" name="Name" placeholder="Your Name" required>
                 <input type="text" name="Phone-Number" placeholder="Your Phone Number" required
                     pattern="[0-9]{10}" title="Please enter a 10-digit phone number (numbers only)">
-                <input type="email" name="email" placeholder="Your Email" required>
+                <input type="email" name="Email" placeholder="Your Email" required>
                 <textarea name="Message" rows="6" placeholder="Your Message" required></textarea>
                 <div class="submitButton">
                     <button type="submit" class="btn btn-color-1">Submit</button>
                 </div>
-               
             </form>
+            <span id="msg"></span>
+            
             </div>
           </div>
         </div>
