--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="title">Tushar Mahajan</h1>
             <p class="section__text__p2">Android Devloper(Kotlin) || Full-Stack Devloper</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/profile.pdf')">
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume_example.pdf')">
                     View CV
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
