--- a/webProjects.html
+++ b/webProjects.html
@@ -82,7 +82,7 @@
                     onclick="location.href='https://github.com/Tushar20-20Mahajan/My-Portfolio.git'">
                     Git-Hub
                 </button>
-                <button class="btn btn-color-1" onclick="location.href='https://my-portfolio-ugdx.vercel.app/'">
+                <button class="btn btn-color-1" onclick="location.href='https://my-portfolio-alpha-mauve.vercel.app/'">
                     Live-Demo
                 </button>
             </div>
