--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="title">Tushar Mahajan</h1>
             <p class="section__text__p2">Android Devloper(Kotlin) || Full-Stack Devloper</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/TusharMahajan(CV-Resume).pdf')">
+                <button class="btn btn-color-2" onclick="window.open('./assets/Tushar Mahajan(Resume).pdf')">
                     View CV
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -341,7 +341,7 @@
                             onclick="location.href='https://www.youtube.com/channel/UCCKlzjC09UeUeCABtaszHbg'">
                     </div>
                     <div id="download-cv">
-                        <a class="btn btn-color-1" href="./assets/TusharMahajan(CV-Resume).pdf" download>Download Resume</a>
+                        <a class="btn btn-color-1" href="./assets/Tushar Mahajan(Resume).pdf" download>Download Resume</a>
                     </div>
                 </div>
                 <div class="contact-right">
