--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <img src="./assets/Summary-logo.png" alt="Summary icon" class="icon">
             <h3><u>Summary</u></h3>
             <p>
-                Hii!<br>
+                <!-- Hii!<br>
                 I am Tushar Mahajan a student at Chitkara University, Punjab in B.E.-CSE
                 (3rd year).
                 CGPA -: 9.64<br>Android Development(Kotlin)<br>
@@ -147,7 +147,36 @@
                 I play sports like Cricket 🏏, Football ⚽, Basketball 🏀.
                 I play athletics sports like 100m race,200m race, Relay race 🏁, Long 
                 Jump, Shot put, Discus Throw.
-            </p>
+            </p> -->
+
+                I'm Tushar Mahajan, currently in my 3rd year pursuing a Bachelor's degree in Computer Science and
+                Engineering (B.E.-CSE) at Chitkara University, Punjab. With a stellar CGPA of 9.64, my commitment to
+                academic excellence has been unwavering.
+                <br><br>
+
+                My passion for technology serves as the cornerstone of my achievements, and I'm eager to elevate this
+                passion to the next level by applying my knowledge and skills to a dynamic job opportunity. With a solid
+                foundation in computer science and an insatiable thirst for learning, I'm confident in my ability to
+                make a meaningful impact in a professional setting.
+                <br><br>
+
+                Beyond the classroom, I'm an avid sports enthusiast, participating in a variety of sports such as
+                Cricket 🏏, Football ⚽, and Basketball 🏀. I also excel in athletics, competing in events like the 100m
+                race, 200m race, Relay race 🏁, Long Jump, Shot Put, and Discus Throw.
+                <br><br>
+
+                In addition to my academic pursuits, I've achieved notable success in competitive exams. I secured a
+                remarkable 92% percentile in Jee Mains and have also taken on challenges like KVPY, JEE Advanced, and
+                NDA.
+                <br><br>
+
+                I'm excited about the possibilities that lie ahead in my career journey and am actively seeking
+                opportunities where I can apply my skills, contribute meaningfully, and continue my growth in the world
+                of technology.
+                <br><br>
+
+                Let's connect and explore how we can collaborate!
+                <br><br>
             </p>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
@@ -341,7 +370,8 @@
                             onclick="location.href='https://www.youtube.com/channel/UCCKlzjC09UeUeCABtaszHbg'">
                     </div>
                     <div id="download-cv">
-                        <a class="btn btn-color-1" href="./assets/Tushar Mahajan(Resume).pdf" download>Download Resume</a>
+                        <a class="btn btn-color-1" href="./assets/Tushar Mahajan(Resume).pdf" download>Download
+                            Resume</a>
                     </div>
                 </div>
                 <div class="contact-right">
