--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Tushar Mahajan</h1>
-            <p class="section__text__p2">Android Devloper(Kotlin) || Full-Stack Devloper</p>
+            <p class="section__text__p2">Android Developer(Kotlin) || Full-Stack Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/Tushar Mahajan(Resume).pdf')">
                     View CV
