--- a/webProjects.html
+++ b/webProjects.html
@@ -1,239 +1,285 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Projects (Tushar Mahajan)</title>
-    <link rel="stylesheet" href="styleWeb.css">
-    <link rel="icon" type="assets/x-icon" href="/assets/favicon.ico">
-    <meta name="description" content="
+    <link rel="stylesheet" href="styleWeb.css" />
+    <link rel="icon" type="assets/x-icon" href="/assets/favicon.ico" />
+    <meta
+      name="description"
+      content="
     Discover my portfolio crafted with HTML, CSS, and JS. Immerse yourself in a 
     dynamic showcase of my projects, thoughtfully designed and skillfully coded. 
-    Explore a fusion of creativity and technology that defines my journey as a developer.">
-    <meta name="keywords" content="HTML, CSS, JavaScript , Portfolio , Projects">
-    <meta name="author" content="Tushar Mahajan">
-</head>
+    Explore a fusion of creativity and technology that defines my journey as a developer."
+    />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript , Portfolio , Projects"
+    />
+    <meta name="author" content="Tushar Mahajan" />
+  </head>
 
-<body>
+  <body>
     <div class="logo">Tushar Mahajan Web-Projects</div>
 
     <div class="btn-containerBack">
-        <button onclick="location.href='index.html'">
-            <img src="./assets/back-btn.png" alt="Back to Home Page" class="icon">
-
-        </button>
-        <p class="back-Para">Back to Home Page</p>
+      <button onclick="location.href='index.html'">
+        <img src="./assets/back-btn.png" alt="Back to Home Page" class="icon" />
+      </button>
+      <p class="back-Para">Back to Home Page</p>
     </div>
 
     <!-- project 1 -->
     <p class="section__text__p6">Project 1</p>
     <h1 class="title">My Image Gallery</h1>
     <div class="section__pic-container-profile">
-        <img src="./assets/image-gallery.png" alt="Tushar Mahajan profile picture" />
+      <img
+        src="./assets/image-gallery.png"
+        alt="Tushar Mahajan profile picture"
+      />
     </div>
     <div id="project1">
-        <div class="section__text">
-            <p class="section__text__p2">About</p>
-            <p class="section__text__p3"> Responsive image gallery using HTML/CSS. Cards with drop shadow & hover
-                effects. Captions fade-in on hover. Styled heading with font change & shadow. Adaptive layout &
-                transition effects. Created by Tushar Mahajan</p>
-            <p class="section__text__p5"><u>Languages</u></p>
-            <p class="section__text__p3">
-                HTML->84.2%
-                CSS ->15.8%
-                JavaScript->0.0%</p>
+      <div class="section__text">
+        <p class="section__text__p2">About</p>
+        <p class="section__text__p3">
+          Responsive image gallery using HTML/CSS. Cards with drop shadow &
+          hover effects. Captions fade-in on hover. Styled heading with font
+          change & shadow. Adaptive layout & transition effects. Created by
+          Tushar Mahajan
+        </p>
+        <p class="section__text__p5"><u>Languages</u></p>
+        <p class="section__text__p3">
+          HTML->84.2% CSS ->15.8% JavaScript->0.0%
+        </p>
 
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/ImageGallery.git'">
-                    Git-Hub
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='https://image-gallery-nine-fawn.vercel.app/'">
-                    Live-Demo
-                </button>
-            </div>
-
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="location.href='https://github.com/Tushar20-20Mahajan/ImageGallery.git'"
+          >
+            Git-Hub
+          </button>
+          <button
+            class="btn btn-color-1"
+            onclick="location.href='https://image-gallery-nine-fawn.vercel.app/'"
+          >
+            Live-Demo
+          </button>
         </div>
+      </div>
     </div>
 
     <!-- project 2 -->
     <p class="section__text__p4">Project 2</p>
     <h1 class="title">My Portfolio</h1>
     <div class="section__pic-container-profile">
-        <img src="./assets/myPortfolio.png" alt="Tushar Mahajan profile picture" />
+      <img
+        src="./assets/myPortfolio.png"
+        alt="Tushar Mahajan profile picture"
+      />
     </div>
     <div id="project2">
-        <div class="section__text">
+      <div class="section__text">
+        <p class="section__text__p2">About</p>
+        <p class="section__text__p3">
+          Discover my portfolio crafted with HTML, CSS, and JS. Immerse yourself
+          in a dynamic showcase of my projects, thoughtfully designed and
+          skillfully coded. Explore a fusion of creativity and technology that
+          defines my journey as a developer.
+        </p>
+        <p class="section__text__p5"><u>Languages</u></p>
+        <p class="section__text__p3">HTML->61.9% CSS->37.3% JavaScript->0.8%</p>
 
-            <p class="section__text__p2">About</p>
-            <p class="section__text__p3"> Discover my portfolio crafted with HTML, CSS, and JS. Immerse yourself in a
-                dynamic showcase of my projects, thoughtfully designed and skillfully coded. Explore a fusion of
-                creativity and technology that defines my journey as a developer.</p>
-            <p class="section__text__p5"><u>Languages</u></p>
-            <p class="section__text__p3">
-
-                HTML->61.9%
-                CSS->37.3%
-                JavaScript->0.8%</p>
-
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/My-Portfolio.git'">
-                    Git-Hub
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='https://my-portfolio-alpha-mauve.vercel.app/'">
-                    Live-Demo
-                </button>
-            </div>
-
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="location.href='https://github.com/Tushar20-20Mahajan/My-Portfolio.git'"
+          >
+            Git-Hub
+          </button>
+          <button
+            class="btn btn-color-1"
+            onclick="location.href='https://my-portfolio-alpha-mauve.vercel.app/'"
+          >
+            Live-Demo
+          </button>
         </div>
+      </div>
     </div>
-
 
     <!-- project 3 -->
     <p class="section__text__p4">Project 3</p>
-    <h1 class="title">Clone(FUGIFILM)</h1>
+    <h1 class="title">Tic-Tac-Toe</h1>
     <div class="section__pic-container-profile">
-        <img src="./assets/fugi-film.png" alt="Tushar Mahajan profile picture" />
+      <img src="./assets/tic-tac-toe.png" alt="Tushar Mahajan profile picture" />
     </div>
     <div id="project2">
+      <div class="section__text">
+        <p class="section__text__p2">About</p>
+        <p class="section__text__p3">
+          A classic game of Tic-tac-toe, built with React.js for 2 friends to
+          enjoy. Simple, fun, and intuitive!
+        </p>
+        <p class="section__text__p5"><u>Languages</u></p>
+        <p class="section__text__p3">HTML->15.2% CSS->17.5% JavaScript->67.3%</p>
 
-        <div class="section__text">
-
-            <p class="section__text__p2">About</p>
-            <p class="section__text__p3">
-                Welcome to the Clone website of FujiFilm Camera! Discover the world of photography with our exquisite
-                collection of cutting-edge cameras and accessories, designed to capture life's precious moments in
-                stunning clarity and detail.</p>
-            <p class="section__text__p5"><u>Languages</u></p>
-            <p class="section__text__p3">
-
-                HTML->97.8%
-                CSS->0.6%
-                JavaScript->1.6%</p>
-
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/Camera_FugiFilm_Clone.git'">
-                    Git-Hub
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='https://camera-fugi-film-clone.vercel.app/'">
-                    Live-Demo
-                </button>
-            </div>
-
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="location.href='https://github.com/Tushar20-20Mahajan/tic_tac_toe.git'"
+          >
+            Git-Hub
+          </button>
+          <button
+            class="btn btn-color-1"
+            onclick="location.href='https://tushar20-20mahajan.github.io/tic_tac_toe/'"
+          >
+            Live-Demo
+          </button>
         </div>
+      </div>
     </div>
 
     <!-- project 4 -->
     <p class="section__text__p4">Project 4</p>
-    <h1 class="title">Parallax Effects</h1>
+    <h1 class="title">Clone(FUGIFILM)</h1>
     <div class="section__pic-container-profile">
-        <img src="./assets/Parallax.png" alt="Tushar Mahajan profile picture" />
+      <img src="./assets/fugi-film.png" alt="Tushar Mahajan profile picture" />
     </div>
     <div id="project2">
+      <div class="section__text">
+        <p class="section__text__p2">About</p>
+        <p class="section__text__p3">
+          Welcome to the Clone website of FujiFilm Camera! Discover the world of
+          photography with our exquisite collection of cutting-edge cameras and
+          accessories, designed to capture life's precious moments in stunning
+          clarity and detail.
+        </p>
+        <p class="section__text__p5"><u>Languages</u></p>
+        <p class="section__text__p3">HTML->97.8% CSS->0.6% JavaScript->1.6%</p>
 
-        <div class="section__text">
-
-            <p class="section__text__p2">About</p>
-            <p class="section__text__p3">
-                Create captivating websites with the parallax effect using HTML and CSS. Immerse users in a dynamic 3D
-                experience as background images move at different speeds while scrolling. Elevate visual storytelling
-                and engagement with this simple yet powerful technique.</p>
-            <p class="section__text__p5"><u>Languages</u></p>
-            <p class="section__text__p3">
-
-                HTML->44.9%
-                CSS->55.1%
-                JavaScript->0.0%</p>
-
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/Parallax_Effect.git'">
-                    Git-Hub
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='https://parallax-effect-xi.vercel.app/'">
-                    Live-Demo
-                </button>
-            </div>
-
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="location.href='https://github.com/Tushar20-20Mahajan/Camera_FugiFilm_Clone.git'"
+          >
+            Git-Hub
+          </button>
+          <button
+            class="btn btn-color-1"
+            onclick="location.href='https://camera-fugi-film-clone.vercel.app/'"
+          >
+            Live-Demo
+          </button>
         </div>
+      </div>
     </div>
 
     <!-- project 5 -->
     <p class="section__text__p4">Project 5</p>
-    <h1 class="title">Clone(Saudhi)</h1>
+    <h1 class="title">Parallax Effects</h1>
     <div class="section__pic-container-profile">
-        <img src="./assets/saudhi.png" alt="Tushar Mahajan profile picture" />
+      <img src="./assets/Parallax.png" alt="Tushar Mahajan profile picture" />
     </div>
     <div id="project2">
-        <div class="section__text">
-            <p class="section__text__p2">About</p>
-            <p class="section__text__p3">
-                Welcome to our clone website of Saudi Arabia Tourism! Immerse yourself in the rich cultural heritage and
-                breathtaking landscapes of this majestic country, brought to life through stunning visuals and
-                interactive elements. Explore the wonders of Saudi Arabia right from your screen with our engaging HTML
-                and CSS design.</p>
-            <p class="section__text__p5"><u>Languages</u></p>
-            <p class="section__text__p3">
+      <div class="section__text">
+        <p class="section__text__p2">About</p>
+        <p class="section__text__p3">
+          Create captivating websites with the parallax effect using HTML and
+          CSS. Immerse users in a dynamic 3D experience as background images
+          move at different speeds while scrolling. Elevate visual storytelling
+          and engagement with this simple yet powerful technique.
+        </p>
+        <p class="section__text__p5"><u>Languages</u></p>
+        <p class="section__text__p3">HTML->44.9% CSS->55.1% JavaScript->0.0%</p>
 
-                HTML->87.0%
-                CSS->13.0%
-                JavaScript->0.0%</p>
-
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="location.href='https://github.com/Tushar20-20Mahajan/Clone_Saudhi.git'">
-                    Git-Hub
-                </button>
-                <button class="btn btn-color-1" onclick="location.href='https://clone-saudhi.vercel.app/'">
-                    Live-Demo
-                </button>
-            </div>
-
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="location.href='https://github.com/Tushar20-20Mahajan/Parallax_Effect.git'"
+          >
+            Git-Hub
+          </button>
+          <button
+            class="btn btn-color-1"
+            onclick="location.href='https://parallax-effect-xi.vercel.app/'"
+          >
+            Live-Demo
+          </button>
         </div>
+      </div>
     </div>
-
 
     <!-- project 6 -->
     <p class="section__text__p4">Project 6</p>
-    <h1 class="title">Chat-Live</h1>
+    <h1 class="title">Clone(Saudhi)</h1>
     <div class="section__pic-container-profile">
-        <img src="./assets/chat-live.png" alt="Tushar Mahajan profile picture" />
+      <img src="./assets/saudhi.png" alt="Tushar Mahajan profile picture" />
     </div>
     <div id="project2">
-        <div class="section__text">
-            <p class="section__text__p2">About</p>
-            <p class="section__text__p3">
-                Chat-Live is a clone website that replicates the Login and SignUp pages of Facebook, designed with HTML
-                and CSS. Users can experience a familiar interface while accessing Chat-Live's services, reminiscent of
-                the popular social media platform.</p>
-            <p class="section__text__p5"><u>Languages</u></p>
-            <p class="section__text__p3">
+      <div class="section__text">
+        <p class="section__text__p2">About</p>
+        <p class="section__text__p3">
+          Welcome to our clone website of Saudi Arabia Tourism! Immerse yourself
+          in the rich cultural heritage and breathtaking landscapes of this
+          majestic country, brought to life through stunning visuals and
+          interactive elements. Explore the wonders of Saudi Arabia right from
+          your screen with our engaging HTML and CSS design.
+        </p>
+        <p class="section__text__p5"><u>Languages</u></p>
+        <p class="section__text__p3">HTML->87.0% CSS->13.0% JavaScript->0.0%</p>
 
-                HTML->72.0%
-                CSS->28.0%
-                JavaScript->0.0%</p>
-
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                    onclick="'https://github.com/Tushar20-20Mahajan/Clone_FB_Login_SignUp_Chat_Live.git'">
-                    Git-Hub
-                </button>
-                <button class="btn btn-color-1"
-                    onclick="location.href='https://clone-fb-login-sign-up-chat-live.vercel.app/'">
-                    Live-Demo
-                </button>
-            </div>
-
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="location.href='https://github.com/Tushar20-20Mahajan/Clone_Saudhi.git'"
+          >
+            Git-Hub
+          </button>
+          <button
+            class="btn btn-color-1"
+            onclick="location.href='https://clone-saudhi.vercel.app/'"
+          >
+            Live-Demo
+          </button>
         </div>
+      </div>
     </div>
 
+    <!-- project 7 -->
+    <p class="section__text__p4">Project 7</p>
+    <h1 class="title">Chat-Live</h1>
+    <div class="section__pic-container-profile">
+      <img src="./assets/chat-live.png" alt="Tushar Mahajan profile picture" />
+    </div>
+    <div id="project2">
+      <div class="section__text">
+        <p class="section__text__p2">About</p>
+        <p class="section__text__p3">
+          Chat-Live is a clone website that replicates the Login and SignUp
+          pages of Facebook, designed with HTML and CSS. Users can experience a
+          familiar interface while accessing Chat-Live's services, reminiscent
+          of the popular social media platform.
+        </p>
+        <p class="section__text__p5"><u>Languages</u></p>
+        <p class="section__text__p3">HTML->72.0% CSS->28.0% JavaScript->0.0%</p>
 
-
-
-
-</body>
-
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="'https://github.com/Tushar20-20Mahajan/Clone_FB_Login_SignUp_Chat_Live.git'"
+          >
+            Git-Hub
+          </button>
+          <button
+            class="btn btn-color-1"
+            onclick="location.href='https://clone-fb-login-sign-up-chat-live.vercel.app/'"
+          >
+            Live-Demo
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
