--- a/index.html
+++ b/index.html
@@ -214,15 +214,8 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>HTML</h3>
+                                <h3>HTML , CSS</h3>
                                 <p>Expierenced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>CSS</h3>
-                                <p>Experienced</p>
                             </div>
                         </article>
                         <article>
@@ -250,6 +243,13 @@
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
                                 <h3>Figma</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
+                                <h3>Linux , SQL</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
