Infosys Internship page and image added

--- a/index.html
+++ b/index.html
@@ -327,6 +327,15 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
+                                <h3>Infosys Internship </h3>
+                                <a
+                                    href= "InfosysInternshipCertificate.html">Show
+                                    Credendial</a>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                            <div>
                                 <h3>C++</h3>
                                 <a
                                     href="http://files.codingninjas.in/certificate234671461fb6d81de089467490dff6136206c04.pdf">Show
