iOS Devlopment Added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Tushar Mahajan</h1>
-            <p class="section__text__p2">Android Developer(Kotlin) || Full-Stack Developer</p>
+            <p class="section__text__p2"> Software Developer</p>
+            <p class="section__text__p1"> iOS(SwiftUI + iOS Frameworks) || Android(Kotlin) || Web</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/TusharMahajan(Resume).pdf')">
                     View CV
@@ -110,23 +111,23 @@
                             <h2>Experience</h2>
                         </div>
                         <div class="experience-item">
-                            <h3>Chitkara University</h3>
-                            <p><strong>Position:</strong> Student</p>
-                            <p><strong>Duration:</strong> September 2021 - Present (2+ years)</p>
-                            <p><strong>Location:</strong> Rajpura, Punjab, India</p>
+                            <h3>Infosys</h3>
+                            <p><strong>Position:</strong> iOS App Devloper</p>
+                            <p><strong>Duration:</strong> May 2024 - June 2024 </p>
+                            <p><strong>Location:</strong> Mysuru , KArnataka, India</p>
                         </div>
-                        <div class="experience-details">
+                        <!-- <div class="experience-details">
                             <h4>Frontend Development</h4>
                             <p><strong>Experience:</strong> 1+ year</p>
-                        </div>
-                        <div class="experience-details">
+                        </div> -->
+                        <!-- <div class="experience-details">
                             <h4>Android Development</h4>
                             <p><strong>Experience:</strong> 1+ year</p>
-                        </div>
-                        <div class="experience-details">
+                        </div> -->
+                        <!-- <div class="experience-details">
                             <h4>Java Development</h4>
                             <p><strong>Experience:</strong> 1+ year</p>
-                        </div>
+                        </div> -->
                     </div>
                     
                     <div class="details-container">
