Experience and summary section modified

--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@
                         </div>
                         <div class="experience-item">
                             <h3>Infosys</h3>
-                            <p><strong>Position:</strong> iOS App Devloper</p>
-                            <p><strong>Duration:</strong> May 2024 - June 2024 </p>
-                            <p><strong>Location:</strong> Mysuru , KArnataka, India</p>
+                            <p><strong>Position:</strong> iOS App Developer</p>
+                            <p><strong>Duration:</strong> May 2024 - June 2024</p>
+                            <p><strong>Location:</strong> Mysuru, Karnataka, India</p>
+                            <p><strong>Description:</strong> Successfully completed a one-month internship focused on iOS Development. Gained proficiency in SwiftUI, Swift, API integration using Postman, and Xcode. Actively engaged in Agile methodologies, contributing to team management and teamwork. Enhanced presentation skills and deepened understanding of Scrum practices. Developed strong problem-solving abilities, time management, and effective communication skills.</p>
+                            
                         </div>
                         <!-- <div class="experience-details">
                             <h4>Frontend Development</h4>
@@ -168,54 +170,9 @@
                 <img src="./assets/Summary-logo.png" alt="Summary icon" class="icon">
             <h3><u>Summary</u></h3>
             <p>
-                <!-- Hii!<br>
-                I am Tushar Mahajan a student at Chitkara University, Punjab in B.E.-CSE
-                (3rd year).
-                CGPA -: 9.64<br>Android Development(Kotlin)<br>
-                Java - DSA<br>
-                Web-Devlopment<br>
                 
-            </p>
-            <h4>EDUCATIONAL DETAILS -></h4>
-            <p>
-                I have cracked Jee Mains with 92% percentile and have also
-                appeared in KVPY, JEE Advanced, NDA .<br>
-            </p>
 
-            <h4>Sports & Hobbies-></h4>
-            <p>
-                I play sports like Cricket 🏏, Football ⚽, Basketball 🏀.
-                I play athletics sports like 100m race,200m race, Relay race 🏁, Long 
-                Jump, Shot put, Discus Throw.
-            </p> -->
-
-                I'm Tushar Mahajan, currently in my 3rd year pursuing a Bachelor's degree in Computer Science and
-                Engineering (B.E.-CSE) at Chitkara University, Punjab. With a stellar CGPA of 9.64, my commitment to
-                academic excellence has been unwavering.
-                <br><br>
-
-                My passion for technology serves as the cornerstone of my achievements, and I'm eager to elevate this
-                passion to the next level by applying my knowledge and skills to a dynamic job opportunity. With a solid
-                foundation in computer science and an insatiable thirst for learning, I'm confident in my ability to
-                make a meaningful impact in a professional setting.
-                <br><br>
-
-                Beyond the classroom, I'm an avid sports enthusiast, participating in a variety of sports such as
-                Cricket 🏏, Football ⚽, and Basketball 🏀. I also excel in athletics, competing in events like the 100m
-                race, 200m race, Relay race 🏁, Long Jump, Shot Put, and Discus Throw.
-                <br><br>
-
-                In addition to my academic pursuits, I've achieved notable success in competitive exams. I secured a
-                remarkable 92% percentile in Jee Mains and have also taken on challenges like KVPY, JEE Advanced, and
-                NDA.
-                <br><br>
-
-                I'm excited about the possibilities that lie ahead in my career journey and am actively seeking
-                opportunities where I can apply my skills, contribute meaningfully, and continue my growth in the world
-                of technology.
-                <br><br>
-
-                Let's connect and explore how we can collaborate!
+            Passionate about technology with a solid foundation in computer science, I am dedicated to excellence and continuous learning. I am eager to apply my skills in a dynamic professional environment and make meaningful contributions. Actively participating in the Cricket Sports Club and Chitkara Cricket Team, as well as engaging in basketball, football, and volleyball, I have developed strong teamwork and collaboration skills. Let’s connect and explore how we can collaborate for mutual growth and success!
                 <br><br>
             </p>
         </div>
