--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
           <div class="details-container color-container no-hover">
             <div class="article-container">
               <h2 class="experience-sub-title project-title">
-                <u>Web Projects</u>
+                <u>Web-Development Projects</u>
               </h2>
               <div class="project-container">
                 <!-- Wrap in a project-container -->
@@ -599,7 +599,7 @@
           <div class="details-container color-container no-hover">
             <div class="article-container">
               <h2 class="experience-sub-title project-title">
-                <u>Android Projects</u>
+                <u>Mobile-Development Projects</u>
               </h2>
               <div class="project-container">
                 <!-- Wrap in a project-container -->
@@ -613,7 +613,7 @@
                     class="btn btn-color-2 project-btn"
                     onclick="location.href='androidProjects.html'"
                   >
-                    Go to my Android Projects
+                    Go to my Mobile-App Projects
                   </button>
                 </div>
               </div>
