web development updated section modified

--- a/webProjects.html
+++ b/webProjects.html
@@ -32,14 +32,103 @@
 
     <!-- project 1 -->
     <p class="section__text__p6">Project 1</p>
-    <h1 class="title">My Image Gallery</h1>
+    <h1 class="title">BertFlix</h1>
+    <div class="section__pic-container-profile">
+      <img
+        src="./assets/BertflixImage.png"
+        alt="Tushar Mahajan BertflixImage"
+      />
+    </div>
+
+    <div id="project1">
+      <div class="section__text">
+        <p class="section__text__p2">About</p>
+        <p class="section__text__p3">
+          Fullstack open source movie application made with MongoDB, Express, React & Nodejs (MERN)
+        </p>
+        <p class="section__text__p2">Key Features</p>
+        <ul style="text-align: left;">
+          <li>User registration and login</li>
+          <li>Authentication using JWT Tokens</li>
+          <li>Add Favorites</li>
+          <li>Delete Favorites</li>
+          <li>Leave a Reviews</li>
+          <li>Delete Reviews</li>
+          <li>Password Update</li>
+          <li>Search Live</li>
+          <li>Watch the trailer on Youtube</li>
+          <li>404 Page and many more</li>
+          <li>Skeleton loading effect</li>
+          <li>DarkMode</li>
+          <li>Responsive Design</li>
+        </ul>
+        <p class="section__text__p2">Technologies used</p>
+        <p>This project was created using the following technologies.</p>
+        <div>
+          <p class="section__text__p3">Frontend</p>
+          <ul style="text-align: center;">
+            <li>React js - JavaScript library that is used for building user interfaces specifically for single-page applications</li>
+            <li>React Hooks - For managing and centralizing application state</li>
+            <li>react-router-dom - To handle routing</li>
+            <li>axios - For making Api calls</li>
+            <li>Material UI - For User Interface</li>
+            <li>CK-Editor - Rich Text Editor</li>
+            <li>Formik - Manage status and validation of data on forms efficiently</li>
+            <li>React Redux - Manage application state efficiently and provide a more structured mechanism for managing data</li>
+            <li>React Toastify - To display interactive and responsive notifications (toasts) in web applications</li>
+            <li>Swiper - To create responsive and interactive sliders or carousels on web pages</li>
+          </ul>
+        </div>
+        <div>
+          <p class="section__text__p3">Backend</p>
+          <ul style="text-align: left;">
+            <li>Node js - A runtime environment to help build fast server applications using JS</li>
+            <li>Express js - The server for handling and routing HTTP requests</li>
+            <li>Mongoose - For modeling and mapping MongoDB data to JavaScript</li>
+            <li>axios - For making Api calls</li>
+            <li>jsonwebtoken - For authentication</li>
+            <li>cookie-parser - Middleware module used in Node.js web applications to manage cookies</li>
+            <li>cors - Provides a Connect/Express middleware</li>
+            <li>Dotenv - Zero Dependency module that loads environment variables</li>
+            <li>express-validator - Used in Node.js applications with the Express framework to validate data submitted by users (user input)</li>
+            <li>nodemon - Development utility for Node.js applications. Node.js is a runtime platform that allows you to run JavaScript on the server side.</li>
+          </ul>
+        </div>
+        <div>
+          <p class="section__text__p3">Database</p>
+          <ul style="text-align: left;">
+            <li>MongoDB - It provides a free cloud service to store MongoDB collections.</li>
+          </ul>
+          <p class="section__text__p3">Api</p>
+          <ul style="text-align: left;">
+            <li>TMDB API - An application programming interface that provides access to a database of movies, television shows, and related information from The Movie Database platform.</li>
+          </ul>
+        </div>
+        <p class="section__text__p5"><u>Languages</u></p>
+        <p class="section__text__p3">
+          HTML->1.4%  JavaScript->98.6%
+        </p>
+        <div class="btn-container">
+          <button class="btn btn-color-2" onclick="location.href='https://github.com/Tushar20-20Mahajan/ImageGallery.git'">
+            Git-Hub
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='https://image-gallery-nine-fawn.vercel.app/'">
+            Live-Demo
+          </button>
+        </div>
+      </div>
+    </div>
+    
+
+    <div id="project2">
+      <p class="section__text__p4">Project 2</p>
+      <h1 class="title">My Image Gallery</h1>
     <div class="section__pic-container-profile">
       <img
         src="./assets/image-gallery.png"
-        alt="Tushar Mahajan profile picture"
+        alt="Tushar Mahajan Image"
       />
     </div>
-    <div id="project1">
       <div class="section__text">
         <p class="section__text__p2">About</p>
         <p class="section__text__p3">
