Html and css of Infosys certificate deleted and pdf uploaded

--- a/index.html
+++ b/index.html
@@ -441,10 +441,15 @@
                 <div class="article-container">
                     <article>
                         <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                        <div>
+                        <!-- <div>
                           <h3>Infosys Internship</h3>
                           <a href="InfosysInternshipCertificate.html">Show Credential</a>
+                        </div> -->
+                        <div>
+                          <h3>Infosys Internship</h3>
+                          <a href="#" onclick="window.open('./assets/2110991938_TusharMahajan_InfosysCertificate.pdf'); return false;">Show Credential</a>
                         </div>
+                        
                       </article>
                     <article>
                         <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
